force-app/main/default/objects/Email_Read_Status__c/Email_Read_Status__c.object-meta.xml
<CustomObject>
    <description>Tracks which emails have been read by users. Provides persistent storage for email read status across page refreshes and browser sessions.</description>
    <label>Email Read Status</label>
    <nameField>
        <displayFormat>ERS-{0000000}</displayFormat>
        <label>Email Read Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Read Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>