force-app/main/default/objects/Email_Read_Status__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <description>The ID of the EmailMessage that was read</description>
    <externalId>true</externalId>
    <label>Email Message ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>