force-app/main/default/objects/Email_Read_Status__c/fields/Email_User_Key__c.field-meta.xml
<CustomField>
    <fullName>Email_User_Key__c</fullName>
    <description>Unique key combining Email Message ID and User ID to prevent duplicates</description>
    <externalId>true</externalId>
    <label>Email User Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>