force-app/main/default/objects/Email_Read_Status__c/fields/Read_Date__c.field-meta.xml
<CustomField>
    <fullName>Read_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date and time when the email was read</description>
    <label>Read Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>