force-app/main/default/objects/Email_Read_Status__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The ID of the user who read the email</description>
    <label>User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>